# CG_2020

./: Empty n++  README.txt
3DL_systems/: gmon.out
3D_lijntekeningen/: gmon.out
Z_buff_lijn/: gmon.out
line_drawings/: gmon.out
utils/: CMakeLists.txt  Color.h  ExtraFunctions.h  Face.cpp  Face.h  Figure.cpp  Figure.h  Line2D.h  Point2D.h  Point3D.cpp  Point3D.h  ZBuffer.h  easy_image.cc  easy_image.h  engine.cc  tester.L2D
z_buffering3/: 5_zbuffering.ppt  z_buffering023.ini
